--- a/views/board1/boardList.ejs
+++ b/views/board1/boardList.ejs
@@ -38,6 +38,6 @@
 		%>
 		</tbody>
 	</table>    
-	<a href="#" onclick="">Export to Excel</a>
+	<a href="export" onclick="">Export to Excel</a>
 </body>
 </html>
